# Factorial-UT-Lab

./: CMakeLists.txt  Fact.cpp  Fact.hpp  TestFact.cpp
